// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummarySection failure only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CheckIcon />
     
    0
     
    Passed
  </span>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <CrossIcon />
     
    3
     
    Failed
  </span>
  <span
    className="not applicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CircleIcon />
     
    0
     
    Not applicable
  </span>
</div>
`;

exports[`SummarySection failures + not applicable + passes 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <CheckIcon />
     
    2
     
    Passed
  </span>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <CrossIcon />
     
    3
     
    Failed
  </span>
  <span
    className="not applicable"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <CircleIcon />
     
    3
     
    Not applicable
  </span>
</div>
`;

exports[`SummarySection failures + not applicable only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CheckIcon />
     
    0
     
    Passed
  </span>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <CrossIcon />
     
    3
     
    Failed
  </span>
  <span
    className="not applicable"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <CircleIcon />
     
    3
     
    Not applicable
  </span>
</div>
`;

exports[`SummarySection failures + passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <CheckIcon />
     
    2
     
    Passed
  </span>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <CrossIcon />
     
    3
     
    Failed
  </span>
  <span
    className="not applicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CircleIcon />
     
    0
     
    Not applicable
  </span>
</div>
`;

exports[`SummarySection not applicable + passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <CheckIcon />
     
    2
     
    Passed
  </span>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CrossIcon />
     
    0
     
    Failed
  </span>
  <span
    className="not applicable"
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <CircleIcon />
     
    3
     
    Not applicable
  </span>
</div>
`;

exports[`SummarySection not applicable only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <CheckIcon />
     
    2
     
    Passed
  </span>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CrossIcon />
     
    0
     
    Failed
  </span>
  <span
    className="not applicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CircleIcon />
     
    0
     
    Not applicable
  </span>
</div>
`;

exports[`SummarySection passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <span
    className="pass"
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <CheckIcon />
     
    2
     
    Passed
  </span>
  <span
    className="fail"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CrossIcon />
     
    0
     
    Failed
  </span>
  <span
    className="not applicable"
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <CircleIcon />
     
    0
     
    Not applicable
  </span>
</div>
`;
